# definition_match

./: SETUP.md  pyproject.toml
src/definition_match/: app.py  custom_features.py  utils.py
src/definition_match/data/: tech_terms.csv
src/streamlit_template/: app.py
