[project]
name = "Definition_Match"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Michael Gradin", email = "maka.gradin@uoes.rutgers.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "streamlit>=1.42.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
